example client prepared

--- a/example.html
+++ b/example.html
@@ -5,7 +5,9 @@
     <title></title>
     
     <script src="//cdnjs.cloudflare.com/ajax/libs/q.js/1.0.0/q.min.js"></script>
-    <script type="text/javascript" src="http://localhost:8080/lib/model.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
+    <script type="text/javascript" src="lib/model.js"></script>
+	<script type="text/javascript" src="model.shared.js"></script>
 
     <script type="text/javascript">
 
