example2 filter added

--- a/examples/example2/index.html
+++ b/examples/example2/index.html
@@ -18,6 +18,7 @@
     // client code
     var connector = Model.AngularConnector("http://localhost:8080/");
     UserModel.connection(connector);
+    ContentModel.connection(connector);
 
   </script>
 
