modelizer.js refactored

--- a/examples/example1/index.html
+++ b/examples/example1/index.html
@@ -9,7 +9,7 @@
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.9/angular.min.js"></script>
 
   <!-- The Modelizer Library -->
-  <script type="text/javascript" src="model.js"></script>
+  <script type="text/javascript" src="modelizer.js"></script>
 
   <!-- The definitions of our example models -->
   <script type="text/javascript" src="models.js"></script>
