--- a/examples/example3/index.html
+++ b/examples/example3/index.html
@@ -24,7 +24,7 @@
   </style>
 
   <!-- The Modelizer Library -->
-  <script type="text/javascript" src="model.js"></script>
+  <script type="text/javascript" src="modelizer.js"></script>
 
   <!-- The definitions of our example models -->
   <script type="text/javascript" src="models.js"></script>
